--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <div id="logo">
         <a
-            href="https://www.linkedin.com/in/betyvegatechart"
+            href="https://portafoliobety.my.canva.site/inicio"
             target="_blank">
     <img src="img/logoBety.png">
     <h1>WELCOME</h1>
