--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
 
                     <!-- YouTube Video -->
                     <div style="margin: 10px 0; display: flex; justify-content: center;">
-                        <iframe width="800" height="450" src="https://www.youtube.com/embed/YOUR_VIDEO_ID"
+                        <iframe width="800" height="450" src="https://www.youtube.com/embed/FkBJQC18axg?si=9zMgQIJv60-pg0hV"
                             frameborder="0" allowfullscreen></iframe>
                     </div>
 
@@ -657,11 +657,9 @@
                         <!-- a) text and image side by side -->
                         <div class="media-pair">
                             <div class="media-text">
-                                <h5 style="color: #202932; margin-right: 30px;">Text description for creating the
-                                    painting
-                                    part a. This would explain the process shown in the accompanying image. The text
-                                    wraps
-                                    nicely next to the visual content.</h5>
+                                <h5 style="color: #202932; margin-right: 30px;">I designed a tool to create the paintings based on an image input. The mesh’s size and UVs adjust to the proportions of the original image.
+To create a mesh through code, vertex, triangles, and UVs are needed. First, I got the aspect ratio of the painting.
+</h5>
                             </div>
                             <div class="media-content">
                                 <img src="img/blog1a.jpg" alt="Creating the painting step a"
