--- a/index.html
+++ b/index.html
@@ -662,8 +662,8 @@ To create a mesh through code, vertex, triangles, and UVs are needed. First, I g
 </h5>
                             </div>
                             <div class="media-content">
-                                <img src="img/blog1a.jpg" alt="Creating the painting step a"
-                                    style="max-width: 100%; height: auto; border-radius: 8px;">
+                                <img src="img/code_ratio" 
+                                    style=" height: auto; border-radius: 8px;">
                             </div>
                         </div>
 
