--- a/index.html
+++ b/index.html
@@ -515,7 +515,9 @@
                 display: flex;
                 justify-content: center; /* Horizontal centering */
                 height:150px">
-                        <img src="img/homeImg.png" alt="Centered Image">
+                        <video autoplay>
+                            <source src="img/3.mp4" type="video/mp4">
+                        </video>
                     </div>
                 </div>
 
@@ -597,7 +599,9 @@
                 display: flex;
                 justify-content: center; /* Horizontal centering */
                 height:150px">
-                        <img src="img/homeImg.png" alt="Centered Image">
+                        <video autoplay>
+                            <source src="img/4.mp4" type="video/mp4">
+                        </video>
                     </div>
                 </div>
 
@@ -635,7 +639,9 @@
                 display: flex;
                 justify-content: center; /* Horizontal centering */
                 height:150px">
-                        <img src="img/homeImg.png" alt="Centered Image">
+                        <video autoplay>
+                            <source src="img/5.mp4" type="video/mp4">
+                        </video>
                     </div>
                 </div>
             </div>
