--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ To create a mesh through code, vertex, triangles, and UVs are needed. First, I g
 </h5>
                             </div>
                             <div class="media-content">
-                                <img src="img/code_ratio" 
+                                <img src="img/code_ratio.png" 
                                     style=" height: auto; border-radius: 8px;">
                             </div>
                         </div>
