--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
 
         .media-pair {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr 2fr;
             gap: 30px;
             align-items: center;
-            margin-bottom: 50px;
+            margin-bottom: 10px;
         }
 
         .media-text {
@@ -256,6 +256,7 @@
             display: flex;
             flex-direction: column;
             gap: 15px;
+            align-items: center;
         }
 
         /* Responsive adjustments */
@@ -645,15 +646,22 @@
                     </div>
                 </div>
             </div>
+
+
+
+
+
             <div id="blog" style="margin-top: 20px;">
                 <div id="name" style="grid-template-columns:1fr; grid-template-rows: auto; margin:0px;">
                     <h2 style="font-size:40px;">Restore it Yourself Studio </h2>
-                            <h5 style="color: #202932; text-align: center;">Put yourself in the shoes of a restorer while you clean, repair, and varnish famous paintings of the western world! </h5>
+                    <h5 style="color: #202932; text-align: center;">Put yourself in the shoes of a restorer while you
+                        clean, repair, and varnish famous paintings of the western world! </h5>
 
                     <!-- YouTube Video -->
                     <div style="margin: 10px 0; display: flex; justify-content: center;">
-                        <iframe width="800" height="450" src="https://www.youtube.com/embed/FkBJQC18axg?si=9zMgQIJv60-pg0hV"
-                            frameborder="0" allowfullscreen></iframe>
+                        <iframe width="800" height="450"
+                            src="https://www.youtube.com/embed/FkBJQC18axg?si=9zMgQIJv60-pg0hV" frameborder="0"
+                            allowfullscreen></iframe>
                     </div>
 
                     <!-- First Section -->
@@ -663,44 +671,60 @@
                         <!-- a) text and image side by side -->
                         <div class="media-pair">
                             <div class="media-text">
-                                <h5 style="color: #202932; margin-right: 30px;">I designed a tool to create the paintings based on an image input. The mesh’s size and UVs adjust to the proportions of the original image.
-To create a mesh through code, vertex, triangles, and UVs are needed. First, I got the aspect ratio of the painting.
-</h5>
+                                <h5 style="color: #202932; margin-right: 30px;">I designed a tool to create the
+                                    paintings based on an image input. The mesh’s size and UVs adjust to the proportions
+                                    of the original image.
+                                    To create a mesh through code, vertex, triangles, and UVs are needed. First, I got
+                                    the aspect ratio of the painting.
+                                </h5>
                             </div>
                             <div class="media-content">
-                                <img src="img/code_ratio.png" 
-                                    style=" width:033%; height: auto; border-radius: 8px;">
+                                <img src="img/code_ratio.png" style=" width:100%; height: auto; border-radius: 8px;">
                             </div>
                         </div>
 
                         <!-- b) text and 2 videos -->
                         <div class="media-pair">
                             <div class="media-text">
-                                <h5 style="color: #202932; margin-right: 30px;">This mesh is made to have x numbers of faces, front and back (like a grid). So, based on the aspect ratio, I created the faces, first of the front, then of the back with an offset representing the thickness of the canvas.
-Then, I created the triangles in the correct order, so that their normal would face the correct way.
-</h5>
+                                <h5 style="color: #202932; margin-right: 30px;">This mesh is made to have x numbers of
+                                    faces, front and back (like a grid). So, based on the aspect ratio, I created the
+                                    faces, first of the front, then of the back with an offset representing the
+                                    thickness of the canvas.
+                                    Then, I created the triangles in the correct order, so that their normal would face
+                                    the correct way.
+                                </h5>
                             </div>
                             <div class="media-content"
                                 style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px;">
                                 <video controls style="width: 100%; border-radius: 8px;">
-                                    <source src="img/OrdenVertex_02.mp4" type="video/mp4">
-                                </video>
-                                <img src="img/Triangles.png" 
-                                    style=" width:033%; height: auto; border-radius: 8px;">
+                                    <source src="img/OrdenVertex_02.mp4" type="video/mp4"> </video>
+                                <img src="img/Triangles.jpg" style=" width:100%; height: auto; border-radius: 8px;">
                             </div>
                         </div>
 
                         <!-- c) text and image -->
                         <div class="media-pair">
                             <div class="media-text">
-                                <h5 style="color: #202932; margin-right: 30px;">Finally, I did the UVs. I wanted to have all the textures in the same material. Therefore, I determined that the painting per se would occupy the first half of the UV space, while the canvas texture would be on the other half. The tricky part was the thickness, as it can vary on size. So, what I did was to put their vertex UVs “inside” the canvas texture, so that the texturing would be seamless.
-The needed deformations are carried out in the shader, like the canvas texture tiling, etc.
+                                <h5 style="color: #202932; margin-right: 30px;">Finally, I did the UVs. I wanted to have
+                                    all the textures in the same material. Therefore, I determined that the painting per
+                                    se would occupy the first half of the UV space, while the canvas texture would be on
+                                    the other half. The tricky part was the thickness, as it can vary on size. So, what
+                                    I did was to put their vertex UVs “inside” the canvas texture, so that the texturing
+                                    would be seamless.
+                                    The needed deformations are carried out in the shader, like the canvas texture
+                                    tiling, etc.
 
-</h5>
+                                </h5>
                             </div>
-                            <div class="media-content">
-                                <img src="img/blog1c.jpg" alt="Creating the painting step c"
+                            <div class="media-content"
+                            style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 15px;">
+                                <img src="img/uvs_mesh.png"
                                     style="max-width: 100%; height: auto; border-radius: 8px;">
+                                    <img src="img/uv_exp.png"
+                                    style="max-width: 100%; height: auto; border-radius: 8px;">
+                                    <video controls style="width: 100%; border-radius: 8px;">
+                                    <source src="img/uv_test.mp4" type="video/mp4"></video>
+                                </video>
                             </div>
                         </div>
 
@@ -714,9 +738,11 @@ The needed deformations are carried out in the shader, like the canvas texture t
                         <!-- a) text and image side by side -->
                         <div class="media-pair">
                             <div class="media-text">
-                                <h5 style="color: #202932; margin-right: 30px;">I created a shader to generate “procedural” damage to the painting.
-I imported packed noises with different characteristics. I combined them changing their tiling and offset, and using dot product. 
-</h5>
+                                <h5 style="color: #202932; margin-right: 30px;">I created a shader to generate
+                                    “procedural” damage to the painting.
+                                    I imported packed noises with different characteristics. I combined them changing
+                                    their tiling and offset, and using dot product.
+                                </h5>
                             </div>
                             <div class="media-content">
                                 <img src="img/blog2a.jpg" alt="Cracking the painting step a"
@@ -727,7 +753,12 @@ I imported packed noises with different characteristics. I combined them changin
                         <!-- b) text and image -->
                         <div class="media-pair">
                             <div class="media-text">
-                                <h5 style="color: #202932; margin-right: 30px;">But this is not procedural enough. I wanted to achieve a crack-like noise, so I used a Voronoi noise, which is completely different if you change its values. However, this particular node doesn’t let me access and modify the edges of the cells. Consequently, I made a Custom Voronoi node using hlsl based on Íñigo Quilez’s one. I distorted it by plugging in the combined noises into its UVs.
+                                <h5 style="color: #202932; margin-right: 30px;">But this is not procedural enough. I
+                                    wanted to achieve a crack-like noise, so I used a Voronoi noise, which is completely
+                                    different if you change its values. However, this particular node doesn’t let me
+                                    access and modify the edges of the cells. Consequently, I made a Custom Voronoi node
+                                    using hlsl based on Íñigo Quilez’s one. I distorted it by plugging in the combined
+                                    noises into its UVs.
                                 </h5>
                             </div>
                             <div class="media-content">
@@ -739,7 +770,10 @@ I imported packed noises with different characteristics. I combined them changin
                         <!-- c) text, image and video -->
                         <div class="media-pair">
                             <div class="media-text">
-                                <h5 style="color: #202932; margin-right: 30px;">I exposed different parameters that are updated randomly each time a painting is selected. This texture is then integrated into the painting shader as a mask and as a heightmap for parallax occlusion mapping.
+                                <h5 style="color: #202932; margin-right: 30px;">I exposed different parameters that are
+                                    updated randomly each time a painting is selected. This texture is then integrated
+                                    into the painting shader as a mask and as a heightmap for parallax occlusion
+                                    mapping.
                                 </h5>
                             </div>
                             <div class="media-content"
@@ -753,17 +787,20 @@ I imported packed noises with different characteristics. I combined them changin
                         </div>
                     </div>
 
-									<!-- Third Section -->
+                    <!-- Third Section -->
                     <div class="blog-section" style="margin-bottom: 60px;">
                         <h4 style="color: #202932; margin-bottom: 30px;">Painting on the Painting</h4>
 
                         <!-- a) text and image side by side -->
                         <div class="media-pair">
                             <div class="media-text">
-                                <h5 style="color: #202932; margin-right: 30px;">I designed a painting mechanism using shaders and Custom Render Textures. 
-First, I obtained the UV coordinates through the mouse position. Using the past and current position, I calculated different vectors and their projections, as well as length and lerps to get a smooth line. 
+                                <h5 style="color: #202932; margin-right: 30px;">I designed a painting mechanism using
+                                    shaders and Custom Render Textures.
+                                    First, I obtained the UV coordinates through the mouse position. Using the past and
+                                    current position, I calculated different vectors and their projections, as well as
+                                    length and lerps to get a smooth line.
 
-</h5>
+                                </h5>
                             </div>
                             <div class="media-content">
                                 <img src="img/blog2a.jpg" alt="Cracking the painting step a"
@@ -774,7 +811,9 @@ First, I obtained the UV coordinates through the mouse position. Using the past 
                         <!-- b) text and image -->
                         <div class="media-pair">
                             <div class="media-text">
-                                <h5 style="color: #202932; margin-right: 30px;">I imported different brush alphas. Using the past mathematical operations, I distorted their UVs so that the alpha “drags” to the brush position. Also note that it is possible to change the brush sizes.
+                                <h5 style="color: #202932; margin-right: 30px;">I imported different brush alphas. Using
+                                    the past mathematical operations, I distorted their UVs so that the alpha “drags” to
+                                    the brush position. Also note that it is possible to change the brush sizes.
                                 </h5>
                             </div>
                             <div class="media-content">
@@ -786,8 +825,10 @@ First, I obtained the UV coordinates through the mouse position. Using the past 
                         <!-- c) text, image and video -->
                         <div class="media-pair">
                             <div class="media-text">
-                                <h5 style="color: #202932; margin-right: 30px;">This is a texture that feeds itself to get that brush stroke.
-Then, I used another Custom Render Texture to bake different brushes into one single texture.
+                                <h5 style="color: #202932; margin-right: 30px;">This is a texture that feeds itself to
+                                    get that brush stroke.
+                                    Then, I used another Custom Render Texture to bake different brushes into one single
+                                    texture.
 
                                 </h5>
                             </div>
@@ -802,7 +843,7 @@ Then, I used another Custom Render Texture to bake different brushes into one si
                         </div>
                     </div>
 
-										<!-- Final Section -->
+                    <!-- Final Section -->
                     <div class="blog-section" style="margin-bottom: 60px;">
                         <h4 style="color: #202932; margin-bottom: 30px;">Extras</h4>
 
@@ -810,9 +851,9 @@ Then, I used another Custom Render Texture to bake different brushes into one si
                         <div class="media-pair">
                             <div class="media-text">
                                 <h5 style="color: #202932; margin-right: 30px;">Painting textures <br>
-Hover Shader <br>
-Easel Adjustment <br>
-Trimsheets
+                                    Hover Shader <br>
+                                    Easel Adjustment <br>
+                                    Trimsheets
 
 
                                 </h5>
@@ -827,7 +868,7 @@ Trimsheets
                             </div>
                         </div>
                     </div>
-									
+
                 </div>
             </div>
         </div>
