--- a/index.html
+++ b/index.html
@@ -827,7 +827,9 @@
                 <h2>Contact me</h2>
             </div>
             <div style="grid-area: c;">
-                <img src="img/LogoGif.gif" alt="Bety Vega Logo Animation" height="400">
+               <video autoplay loop muted playsinline height="400">
+  <source src="img/LogoAnimation.mp4" type="video/mp4">
+</video>
             </div>
             <div style="grid-area: d;">
                 <div id="header" style="margin:10px 0;">
